fix broken scrollbar

--- a/common/css/tab.css
+++ b/common/css/tab.css
@@ -165,28 +165,23 @@ h1::before, h2::before, h3::before, h4::before, h5::before, h6::before {
 	display: block;
 	padding-top: 20px;
 	font-size: 20px;
-	border-right: 2px solid gray;
+	border-right: 0 2px 0 2px solid #359BB7;
 	overflow-y: scroll;
 	background: white;
 	z-index: 9;
 }
 
-.js-toc::-webkit-scrollbar-track
-{
-	border: 1px solid #359BB7;
+.js-toc::-webkit-scrollbar-track {
 	background-color: #F5F5F5;
 }
 
-.js-toc::-webkit-scrollbar
-{
+.js-toc::-webkit-scrollbar {
 	width: 10px;
 	background-color: #F5F5F5;
 }
 
-.js-toc::-webkit-scrollbar-thumb
-{
+.js-toc::-webkit-scrollbar-thumb {
 	background-color: #359BB7;	
-}
 }
 
 .js-toc-content {
